# app/controllers/v1/messages_controller.rb
@@ -1,12 +1,14 @@
 module V1
   class MessagesController < ApplicationController
     LIMIT = 10
+    # rubocop:disable Metrics/AbcSize
     def index
-      @messages = Message.where(room_id: params[:room_id]).order(id: :desc)
+      @messages = Message.includes(:message_reactions).where(room_id: params[:room_id]).order(id: :desc)
       @messages = @messages.where('id > ?', params[:prev_message_id]) if params[:prev_message_id].present?
       @messages = @messages.where('id < ?', params[:next_message_id]) if params[:next_message_id].present?
       @messages = @messages.limit(LIMIT)
     end
+    # rubocop:enable Metrics/AbcSize
 
     def create
       room = Room.find(params[:room_id])
